scripts/httpproxy/osmn-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: eric-data-object-storage-mn
  namespace: namespace_template
  annotations: 
    kubernetes.io/ingress.class: ingress_class_template
spec:
  virtualhost:
    fqdn: osmn.namespace_template.hostname_template.rnd.gic.ericsson.se
    tls:
      passthrough: true
  tcpproxy:
    services:
      - name: eric-data-object-storage-mn
        port: 9000
