scripts/httpproxy/search-engine-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: eric-data-search-engine
  namespace: namespace_template
  annotations: 
    kubernetes.io/ingress.class: ingress_class_template
spec:
  virtualhost:
    fqdn: se.namespace_template.hostname_template.rnd.gic.ericsson.se
  routes:
  - conditions:
      - prefix: /
    services:
      - name: eric-data-search-engine
        port: 9200
