scripts/httpproxy/worker-envoy-admin-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpproxyname_template
  namespace: namespace_template
  annotations: 
    kubernetes.io/ingress.class: ingress_class_template
spec:
  virtualhost:
    fqdn: prefix_template.namespace_template.hostname_template.rnd.gic.ericsson.se
  routes:
  - conditions:
      - prefix: /
    services:
      - name: service_template
        port: 9901
